--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
             "dom"
         ],
         "target": "es5",
-        "inlineSourceMap": true,
+        "sourceMap": true,
         "outDir": "./dist/"
     }
 }
