--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}/public"
+            "webRoot": "${workspaceFolder}/src",
+            "sourceMaps": true
         }
     ]
 }
