--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./dist/player.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "doc": "npm run doc:gen && http-server ./doc",
+    "doc:gen": "ts2jsdoc . && jsdoc /src/jsdoc/ -d doc"
   },
   "keywords": [
     "audio"
@@ -17,8 +19,11 @@
     "@types/mocha": "^2.2.48",
     "chai": "^4.1.2",
     "eslint": "^4.17.0",
+    "http-server": "^0.11.1",
     "ify-loader": "^1.1.0",
+    "jsdoc": "^3.5.5",
     "mocha": "^5.0.0",
+    "ts-jsdoc": "^3.0.0",
     "ts-loader": "^3.5.0",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1",
