Revive the project (#1)
* Upgrade dependencies, build system and audio player code

* rename time to position on currentTime getter

* Progress events now fire correctly, and next rack cues when current one finishes

* Fix currentTrack getter return value

* Implement seek function

* Create context for Preact (WIP)

* Rename function push to pushTrack

* Add observable-like function for EventEmitter

* Implement stateful context with state change notification

* Fix conditional statement on subscribeAll

* Emit event to listeners through subscribeAll

* add polyfill dependency for test project

* Add state callback in useAudioPlayer

* Implement Preact context provider

* stop() doesn't unload the track anymore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
-    "typeAcquisition": {
-        "enable": true
-    },
-    "compilerOptions": {
-        "lib": [
-            "es6",
-            "dom"
-        ],
-        "target": "es5",
-        "sourceMap": true,
-        "outDir": "./dist/"
-    },
-    "jsdoc": "src/jsdoc/"
+  "typeAcquisition": {
+    "enable": true
+  },
+  "compilerOptions": {
+    "lib": ["es6", "dom", "esnext.asynciterable"],
+    "target": "es6",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "./distTS/",
+    "jsx": "react",
+    "jsxFactory": "h"
+  },
+  "jsdoc": "src/jsdoc/",
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
