--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "p-waves",
   "version": "0.1.0",
   "description": "Ground-breaking component-based audio player for the web",
-  "main": "./dist/player.js",
+  "source": "src/module.js",
+  "main": "dist/pwaves.js",
+  "module": "dist/pwaves.mjs",
+  "unpkg": "dist/pwaves.umd.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack",
+    "dev": "parcel public/index.html",
+    "build": "microbundle build",
     "doc": "npm run doc:gen && http-server ./doc",
     "doc:gen": "ts2jsdoc . ; jsdoc ./src/jsdoc/ -d ./doc; true"
   },
@@ -15,19 +18,21 @@
   "author": "SolarLiner",
   "license": "MIT",
   "devDependencies": {
+    "@babel/polyfill": "^7.4.4",
     "@types/chai": "^4.1.2",
-    "@types/mocha": "^2.2.48",
+    "@types/mocha": "^5.2.7",
     "chai": "^4.1.2",
-    "eslint": "^4.17.0",
+    "eslint": "^5.16.0",
     "http-server": "^0.11.1",
     "ify-loader": "^1.1.0",
     "jsdoc": "^3.5.5",
-    "mocha": "^5.0.0",
+    "microbundle": "^0.11.0",
+    "mocha": "^6.1.4",
+    "parcel": "^1.12.3",
+    "parcel-plugin-url-loader": "^1.3.1",
+    "preact": "^10.0.0-beta.2",
     "ts-jsdoc": "^3.0.0",
-    "ts-loader": "^3.5.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.1",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "typescript": "^3.5.1"
   }
 }
