Fix typo part. 2

--- a/packages/p-waves/package.json
+++ b/packages/p-waves/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "build": "microbundle build",
-    "prepack": "micrubondle build",
+    "prepack": "microbundle build",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
